# aisegment_obs_plugin

./: CMakeLists.txt  README.md  install_obs_plugin.md
3rd/lh320_windows_1.2.2/examples/: example_cv.cpp
3rd/lh320_windows_1.2.2/include/: wx_vseg.h
3rd/lh320_windows_1.2.2/lib/win32/: wx_video_seg.lib
3rd/lh320_windows_1.2.2/lib/x64/: wx_video_seg.lib
3rd/opencv/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
3rd/opencv/include/opencv2/: cvconfig.h
3rd/opencv/x64/vc16/staticlib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  ade.lib  libjpeg-turbo.lib  libopenjp2.lib  libpng.lib  libtiff.lib  libwebp.lib  quirc.lib  zlib.lib
data/: obs.lic
data/locale/: en-US.ini  zh-CN.ini
src/: plugin-macros.generated.h  plugin-main.cpp  wxsegobs.cpp
